# Tiralabra

./: LICENSE  README.md  pyproject.toml  tasks.py
dokumentaatio/: ideointi.md  kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: connect4.py  main.py  oldcode.py
src/tests/: connect4_test.py
