[project]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = [
    {name = "Sampinen"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pylint (>=3.3.7,<4.0.0)",
    "invoke (>=2.2.0,<3.0.0)",
    "coverage (>=7.8.1,<8.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
